finish mobile webverion

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,12 @@
         <header>
             <img class="background" src="./img/NavBackground/NavContact.png" title="BackgroundNavContact" alt="Old tower in the center at a big harbor">
             <section>  
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="hamburger">
+                <img src="img/hamburgermenu.png" title="hamburger menu" alt="hamburger menu constisting of 3 horizontal lines"> 
+                </label>
+                <a class="contactmobile" href="contact.html">contact</a>
+
                 <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 <nav>
                     <ul>
@@ -43,16 +49,34 @@
         </header>
          
         <section class="contact">
+            <!--
+
             <table>
                 <tr>
-                    <th>Phone Number</th>
-                    <th>Location</th>
+                    <th>Phone Number&colon;</th>
+                    <th>06&minus;35284944</th>
                 </tr>
                 <tr>
-                    <th>06-35284944</th>
+                    <th>Location&colon;</th>
                     <th>Hoorn Nieuwe Steen 1 1625HV</th>
                 </tr>
+                <tr>
+                    <th>Author&colon;</th>
+                    <th>Tim Hermans</th>
+                </tr>
             </table>
+            -->
+
+            <aside>
+                <h1>Info</h1>
+                <ul>
+                    <li>Phone Number&colon; 06&minus;35284944</li>
+                    <li>Location&colon; Hoorn Nieuwe Steen 1 1625HV</li>
+                    <li>Author&colon; Tim Hermans</li>
+                </ul>
+                    
+            </aside>
+
             <form action="form.php" method="post">
                     <label for="mr">Mr.</label>
                     <input type="radio" id="mr" name="salutation" value="mr">
@@ -76,13 +100,18 @@
             </form>
         </section>
 
+        <section class="cookie">
+            this website has cookies&period; 
+        </section>
+
+
         <footer>
             <ul>
                 <li>
                     <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
-                    GoingHoorn&#33; &copy; 2024. All rights reserved.
+                    GoingHoorn&#33; &copy; 2024&period; All rights reserved&period;
                 </li>
                 <li>
                     <a href="contact.html">Privacy policy</a>
