--- a/events.html
+++ b/events.html
@@ -14,6 +14,12 @@
         <header>
             <img class="background" src="./img/NavBackground/NavEvents.png" title="BackgroundNavEvents" alt="birds eye view of het parkschouwburg">
             <section> 
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="hamburger">
+                <img src="img/hamburgermenu.png" title="hamburger menu" alt="hamburger menu constisting of 3 horizontal lines"> 
+                </label>
+                <a class="contactmobile" href="contact.html">contact</a>
+
                 <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 <nav>
                     <ul>
@@ -38,7 +44,7 @@
                     </ul>
                 </nav>
                 <h1>Hoorn</h1>
-                <h2>The City of Gold</h2>
+                <h2>The places you want to see&excl;</h2>
             </section>
         </header>
         
@@ -47,35 +53,35 @@
                         <article class="Westfries">
                             <h1>Het Westfries Museum</h1>
                             <p>
-                                This museum takes you back to the Golden Age and shows the rich history of Hoorn and West Friesland. It is located in a monumental building on the Roode Steen and has a beautiful collection of paintings, silverware and archaeological finds. Location: Roode Steen 1 Price: €12.50 for adults, children under 18 free.
+                                This museum takes you back to the Golden Age and shows the rich history of Hoorn and West Friesland&period; It is located in a monumental building on the Roode Steen and has a beautiful collection of paintings&comma; silverware and archaeological finds&period; Location&colon; Roode Steen 1 Price&colon; &euro;12&period;50 for adults&comma; children under 18 free&period;
                             </p>
                             <img src="img/Events/Westfries-Museum.png" title="Westfries Museum" alt="statue of Jan Pieterszoon Coen with old building in the background">
                         </article>
                         <article class="OudeHaven">
                             <h1>Oude Haven</h1>
                             <p>
-                                An attractive place in the heart of Hoorn, where you can walk past historic ships and enjoy the view of the water. It is an important place full of maritime history. Location: Hoorn Price: Free to visit.
+                                An attractive place in the heart of Hoorn&comma; where you can walk past historic ships and enjoy the view of the water&period; It is an important place full of maritime history&period; Location&colon; Hoorn Price&colon; Free to visit&period;
                             </p>
                             <img src="img/Events/Oude-haven.png" title="Oude haven" alt="harbor with ships in the background">
                         </article>
                         <article class="Stadsstrand">
                             <h1>Stadsstrand Hoorn</h1>
                             <p>
-                                A recently constructed beach on the IJsselmeer, where you can relax, swim or walk. It is a popular spot on warm days and offers a beautiful view over the water. Location: Schelphoek Price: Free to visit.
+                                A recently constructed beach on the IJsselmeer&comma; where you can relax&comma; swim or walk&period; It is a popular spot on warm days and offers a beautiful view over the water&period; Location&colon; Schelphoek Price&colon; Free to visit&period;
                             </p>
                             <img src="img/Events/StadsStrand.png" title="Stadsstrand Hoorn" alt="birdseye view of Hoorn's beach">
                         </article>
                         <article class="Museum20eEeuw">
                             <h1>Museum van de 20e Eeuw</h1>
                             <p>
-                                This museum offers a nostalgic journey through the 20th century with exhibits on everyday objects, toys, fashion and technology from that era. It is a fun and interactive museum for young and old. Location: Krententuin 24 Price: €10 for adults, €5 for children.
+                                This museum offers a nostalgic journey through the 20th century with exhibits on everyday objects&comma; toys&comma; fashion and technology from that era&period; It is a fun and interactive museum for young and old&period; Location&colon; Krententuin 24 Price&colon; &euro;10 for adults&comma; &euro;5 for children&period;
                             </p>
                             <img src="img/Events/Museum-20eEeuw.png" title="Museum 20e Eeuw" alt="lake with old prison building in the background">
                         </article>
                         <article class="HetPark">
                             <h1>Schouwburg Het Park</h1>
                             <p>
-                                This modern theater offers a varied program of plays, concerts, musicals and other performances. It is beautifully situated on the water, with a terrace where you can enjoy the view. Location: Westerdijk 4 Price: Ticket prices between €20 and €50.
+                                This modern theater offers a varied program of plays&comma; concerts&comma; musicals and other performances&period; It is beautifully situated on the water&comma; with a terrace where you can enjoy the view&period; Location&colon; Westerdijk 4 Price&colon; Ticket prices between &euro;20 and &euro;50&period;
                             </p>
                             <img src="img/Events/Het-Park.png" title="Park Schouwburg" alt="big building with blue copper roof">
                         </article>
@@ -88,7 +94,7 @@
                     <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
-                    GoingHoorn&#33; &copy; 2024. All rights reserved.
+                    GoingHoorn&#33; &copy; 2024&period; All rights reserved&period;
                 </li>
                 <li>
                     <a href="contact.html">Privacy policy</a>
