--- a/history.html
+++ b/history.html
@@ -14,6 +14,12 @@
         <header>
             <img class="background" src="./img/NavBackground/NavHistory.png" title="BackgroundNavHistory" alt="Painting of harbor of Hoorn with big ships in the front">
             <section>
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="hamburger">
+                <img src="img/hamburgermenu.png" title="hamburger menu" alt="hamburger menu constisting of 3 horizontal lines"> 
+                </label>
+                <a class="contactmobile" href="contact.html">contact</a>
+
                 <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 <nav>
                     <ul>
@@ -38,7 +44,7 @@
                     </ul>
                 </nav>
                 <h1>Hoorn</h1>
-                <h2>The City of Gold</h2>
+                <h2>The history that made our city&excl;</h2>
             </section>
         </header>
         
@@ -50,7 +56,7 @@
                         <article>
                             <h1>Origin of Hoorn</h1>
                             <p>
-                                Hoorn was created in the 12th century as a village at the zuiderzee. The area was typical for the Netherlands and was swampy, But because of inpolderingen the land could be used to build on. The village came to be because of its trade position. Hoorn got its city rights around the year 1357, wich was posible because of economic development of the trade of fish.
+                                Hoorn was created in the 12th century as a village at the zuiderzee&period; The area was typical for the Netherlands and was swampy&comma; But because of inpolderingen the land could be used to build on&period; The village came to be because of its trade position&period; Hoorn got its city rights around the year 1357&comma; wich was posible because of economic development of the trade of fish&period;
                             </p>
                             <img src="img/History/13thCentury.png" title="Hoorn map" alt="Drawn map of early Hoorn">
                         </article>
@@ -60,7 +66,7 @@
                         <article>
                             <h1>Golden era</h1>
                             <p>
-                                The 16th and 17th century Hoorn became even bigger and richer than ever, this came to be because it became a center for the the Verenigde Oost-Indische Compagnie and thus was important place for the worldwide trading. Many famous sailors such as Jan Pieterszoon Coen came from Hoorn. The city was rich and the buildings, such as the Statenlogement and the Hoofdtoren, still reflect this.
+                                The 16th and 17th century Hoorn became even bigger and richer than ever&comma; this came to be because it became a center for the the Verenigde Oost-Indische Compagnie and thus was important place for the worldwide trading&period; Many famous sailors such as Jan Pieterszoon Coen came from Hoorn&period; The city was rich and the buildings&comma; such as the Statenlogement and the Hoofdtoren&comma; still reflect this&period;
                             </p>
                             <img src="img/History/17thCentury.png" title="VOC" alt="statue of Jan Pieterszoon Coen with westfries museum in the background">
                         </article>
@@ -70,7 +76,7 @@
                         <article>
                             <h1>Economic downturn</h1>
                             <p>
-                                After the Golden Age, Hoorn's trade began to stagnate, mainly due to the rise of larger ports such as Amsterdam. The city could no longer keep up with the competition and lost its leading position in international trade. This led to a prolonged period of economic decline.
+                                After the Golden Age&comma; Hoorn&apos;s trade began to stagnate&comma; mainly due to the rise of larger ports such as Amsterdam&period; The city could no longer keep up with the competition and lost its leading position in international trade&period; This led to a prolonged period of economic decline&period;
                             </p>
                             <img src="img/History/19thCentury.png" title="Kaasmarkt" alt="Drawing of cheesemarket in Hoorn">
                     </li>
@@ -80,7 +86,7 @@
                         <article>
                             <h1>Changes in the 19th century</h1>
                             <p>
-                                The 19th century brought new infrastructure to Hoorn with the construction of railways and improved roads. This led to a gradual economic revival. Fishing and agriculture became more important, although the city never regained its former position as a trading center. In the 20th century, Hoorn turned into a commuter city due to the growth of Amsterdam.
+                                The 19th century brought new infrastructure to Hoorn with the construction of railways and improved roads&period; This led to a gradual economic revival&period; Fishing and agriculture became more important&comma; although the city never regained its former position as a trading center&period; In the 20th century&comma; Hoorn turned into a commuter city due to the growth of Amsterdam&period;
                             </p>
                             <img src="img/History/20thCentury.png" title="Hoorn in Black and White" alt="Big buildings on black and white picture">
                         </article>
@@ -90,7 +96,7 @@
                         <article>
                             <h1>Hoorn Now</h1>
                             <p>
-                                In the late 20th and early 21st centuries, Hoorn has been greatly modernized, with new residential areas and a greater emphasis on tourism. The historic city center, combined with the proximity of the IJsselmeer, makes the city attractive for visitors. Today, Hoorn is a vibrant city with a mix of history and modern amenities.
+                                In the late 20th and early 21st centuries&comma; Hoorn has been greatly modernized&comma; with new residential areas and a greater emphasis on tourism&period; The historic city center&comma; combined with the proximity of the IJsselmeer&comma; makes the city attractive for visitors&period; Today&comma; Hoorn is a vibrant city with a mix of history and modern amenities&period;
                             </p>
                             <img src="img/History/21thCentury.png" title="Hoorn Now" alt="people eating and sitting outdoor in Hoorn">
                         </article>
@@ -105,7 +111,7 @@
                     <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
-                    GoingHoorn&#33; &copy; 2024. All rights reserved.
+                    GoingHoorn&#33; &copy; 2024&period; All rights reserved&period;
                 </li>
                 <li>
                     <a href="contact.html">Privacy policy</a>
