--- a/hotels.html
+++ b/hotels.html
@@ -14,6 +14,12 @@
         <header>
             <img class="background" src="./img/NavBackground/NavHotels.png" title="BackgroundNavHotels" alt="hotel room with big blue bed">
             <section>
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="hamburger">
+                <img src="img/hamburgermenu.png" title="hamburger menu" alt="hamburger menu constisting of 3 horizontal lines"> 
+                </label>
+                <a class="contactmobile" href="contact.html">contact</a>
+
                 <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 <nav>
                     <ul>
@@ -38,47 +44,47 @@
                     </ul>
                 </nav>
                 <h1>Hoorn</h1>
-                <h2>The City of Gold</h2>
+                <h2>The Hotels made for you&excl;</h2>
             </section>
         </header>
         
         <main>
              <section class="HotelDetails">
                 <h1>
-                    There are many good Hotels in Hoorn but wich one are actualy good and are worth a Night or two?
+                    There are many good Hotels in Hoorn but wich one are actualy good and are worth a Night or two&quest;
                 </h1>
                 <ul>
                     <li>
                         <img src="img/Hotels/Van-der-Valk.png" title="Hotel van der Valk" alt="big brick hotel in the foreground with blue sky">
                         <h1>Van Der valk Hotel</h1> 
                         <p>
-                            This modern hotel that has luxurius rooms, a hotel, swimingpool, and a sportcentre. The hotel also has a cinima and a casino for extra entertainment. price: 120 euro per night. Go to Website
+                            This modern hotel that has luxurius rooms&comma; a hotel&comma; swimingpool&comma; and a sportcentre&period; The hotel also has a cinima and a casino for extra entertainment&period; price&colon; 120 euro per night&period; Go to Website
                         </p>
-                        <a href="">Go to Website</a>
+                        <a href="https://www.hotelhoorn.com/">Go to Website</a>
                     </li>
                     <li>
                         <img src="img/Hotels/Oostereiland.png" title="Hotel Oostereiland" alt="Old brick prison with many windows">
                         <h1>Hotel Oostereiland</h1> 
                         <p>
-                            This unique hotel is whas a old prison en is on the island next to the harbor of Hoorn. The rooms are refurbished prisonrooms, wich makes for a unique experience. Price 85 euro per night. Go to Website 
+                            This unique hotel is whas a old prison en is on the island next to the harbor of Hoorn&period; The rooms are refurbished prisonrooms&comma; wich makes for a unique experience&period; Price 85 euro per night&period; Go to Website 
                         </p>
-                        <a href="">Go to Website</a>
+                        <a href="https://hotel-oostereiland.nl/">Go to Website</a>
                     </li>
                     <li>
                         <img src="img/Hotels/Hotel-de-Magneet.png" title="Hotel de Magneet" alt="dutch house with old striped sunscreen">
                         <h1>Hotel de Magneet</h1> 
                         <p>
-                            This charming, small hotel is in the harbor of hoorn and has charming rooms and cute feel. It has a beautiful look at the old harbor of Hoorn. and is walking distance to downtown hoorn. price: 100 euro per night. Go to Website
+                            This charming&comma; small hotel is in the harbor of hoorn and has charming rooms and cute feel&period; It has a beautiful look at the old harbor of Hoorn&period; and is walking distance to downtown hoorn&period; price&colon; 100 euro per night&period; Go to Website
                         </p>
-                        <a href="">Go to Website</a>
+                        <a href="https://www.hoteldemagneet.nl/en/">Go to Website</a>
                     </li>
                     <li>
                         <img src="img/Hotels/Hotel-Petit-Nord.png" title="Hotel Petit Nord" alt="house with blue windows with red roof">
                         <h1>Hotel Petit Nord</h1> 
                         <p>
-                            In downtown Hoorn, this hotel has modern rooms and a aziatic restaraunt. The hotel is in close proximity of Hoorn's trainstation and downtown area. Price: 90 euro per night. 
+                            In downtown Hoorn&comma; this hotel has modern rooms and a aziatic restaraunt&period; The hotel is in close proximity of Hoorn&apos;s trainstation and downtown area&period; Price&colon; 90 euro per night&period; 
                         </p>
-                        <a href="">Go to Website</a>
+                        <a href="https://hotelpetitnord.nl/">Go to Website</a>
                     </li>
                 
                 </ul>
@@ -91,7 +97,7 @@
                     <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
-                    GoingHoorn&#33; &copy; 2024. All rights reserved.
+                    GoingHoorn&#33; &copy; 2024&period; All rights reserved&period;
                 </li>
                 <li>
                     <a href="contact.html">Privacy policy</a>
