--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
         <title>GoingHoorn</title>
     </head>
     <body>
+
+
         <header>
             <img class="background" src="./img/NavBackground/NavIndex.png" title="BackgroundNavIndex" alt="birds eye view of the city Hoorn">
             <section>
                 <input type="checkbox" id="menu-toggle">
                 <label for="menu-toggle" class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                <img src="img/hamburgermenu.png" title="hamburger menu" alt="hamburger menu constisting of 3 horizontal lines"> 
                 </label>
+                <a class="contactmobile" href="contact.html">contact</a>
 
                 <img src="img/logo.png" title="GoingHoorn logo" alt="Logo with windmill and title GoingHoorn"> 
                 <nav>
@@ -45,17 +46,17 @@
                     </ul>
                 </nav>
                 <h1>Hoorn</h1>
-                <h2>The City of Gold</h2>
+                <h2>The city at wich you want to be&excl;</h2>
             </section>
         </header>
         
         <main>
             <section class="IndexPageDetails">
                 <h1>
-                    The city of Hoorn with a rich history that dates back to the 14th centuary. The Hoorn was one of the big city's that was of importance in the golden era of the Netherlands, when the VOC was active. Want to know more of the history of Hoorn, than this is the place.
+                    The city of Hoorn with a rich history that dates back to the 14th centuary&period; The Hoorn was one of the big city&apos;s that was of importance in the golden era of the Netherlands&comma; when the <em>VOC</em> was active&period; Want to know more of the history of Hoorn&comma; than this is the place&period;
                 </h1>
                 <h1>
-                    Look no further because we will tell you all about all of that here at GoingHoorn.
+                    Look no further because we will tell you all about all of that here at GoingHoorn&period;
                 </h1>
                 <ul>
                     <li>
@@ -65,7 +66,7 @@
                         <article>
                             <h1>Restaurants</h1>
                             <p>
-                                Hoorn has many diverent restaurants, from tipical Dutch restautants to international kitchens. alot of charming restaurants in the harbor and downtown Hoorn wich you can have a good meal at,  but wich ones should you visit?
+                                Hoorn has many diverent restaurants&comma; from tipical Dutch restautants to international kitchens&period; alot of charming restaurants in the harbor and downtown Hoorn wich you can have a good meal at&comma;  but wich ones should you visit&quest;
                             </p>
                             <a href="./restaurants.html">Read More</a>
                         </article>
@@ -77,7 +78,7 @@
                         <article>
                             <h1>Hotels</h1>
                             <p>
-                                Hoorn is a City with alot of different hotels, there are old historic building but also more modern accomodation. Alot of the hotels are old momunental building and combine comfort with their old charms. But wich ones actualy good?
+                                Hoorn is a City with alot of different hotels&comma; there are old historic building but also more modern accomodation&period; Alot of the hotels are old momunental building and combine comfort with their old charms&period; But wich ones actualy good&quest;
                             </p>
                             <a href="./hotels.html">Read More</a>
                         </article>
@@ -89,7 +90,7 @@
                         <article>
                             <h1>Events</h1>
                             <p>
-                                The city of Hoorn has many fun places to visit Like the old harbor, the old church and oostereiland. Downtown Hoorn also has alot of history and old buildings. With such a rich history there are alot of historic building and momuments but wich ones are now realy of importance to visit?
+                                The city of Hoorn has many fun places to visit Like the old harbor&comma; the old church and oostereiland&period; Downtown Hoorn also has alot of history and old buildings&period; With such a rich history there are alot of historic building and momuments but wich ones are now realy of importance to visit&quest;
                             </p>
                             <a href="./events.html">Read More</a>
                         </article>
@@ -101,7 +102,7 @@
                         <article>
                             <h1>History</h1>
                             <p>
-                                The city of Hoorn with a rich history that dates back to the 14th centuary. The Hoorn was one of the big city's that was of importance in the golden era of the Netherlands, when the VOC was active. Want to know more of the history of Hoorn, than this is the place.
+                                The city of Hoorn with a rich history that dates back to the 14th centuary&period; The Hoorn was one of the big city&apos;s that was of importance in the golden era of the Netherlands&comma; when the VOC was active&period; Want to know more of the history of Hoorn&comma; than this is the place&period;
                             </p>
                             <a href="./history.html">Read More</a>
                         </article>
@@ -117,7 +118,7 @@
                     <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
-                    GoingHoorn&period; &copy; 2024. All rights reserved.
+                    GoingHoorn&period; &copy; 2024&period; All rights reserved&period;
                 </li>
                 <li>
                     <a href="contact.html">Privacy policy</a>
