--- a/restaurants.html
+++ b/restaurants.html
@@ -14,6 +14,12 @@
         <header>
             <img class="background" src="./img/NavBackground/NavRestaurants.png" title="BackgroundNavRestaurants" alt="Restaurant with plants and warm aesthetics">
             <section>
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="hamburger">
+                <img src="img/hamburgermenu.png" title="hamburger menu" alt="hamburger menu constisting of 3 horizontal lines"> 
+                </label>
+                <a class="contactmobile" href="contact.html">contact</a>
+
                 <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 <nav>
                     <ul>
@@ -38,39 +44,39 @@
                     </ul>
                 </nav>
                 <h1>Hoorn</h1>
-                <h2>Want to eat something good?</h2>
+                <h2>Want to eat something good&quest;</h2>
             </section>
         </header>
         
         <main>
             <section class="RestaurantDetails">
                 <h1>
-                    There are many good restaurants in Hoorn but wich one are actualy good and are worth a visit?
+                    There are many good restaurants in Hoorn but wich one are actualy good and are worth a visit&quest;
                 </h1>
                 <ul>
                     <li>
                         <img src="img/Restaurants/Madame-Cheung.png" title="Restaurant Madame Cheung" alt="restaurant with tables in the front ant colorfull walls">
                         <h1>Restaurant Cheung Cuisine</h1> 
                         <p>
-                            Madame Cheung Asian Cuisine has a modern look at the traditional asian resipies with a stylefull interior the restaurant puts alot of care in its fresh ingrienants and good taste. Speciality: Sushi and other asian food. Location: In the center of Hoorn        
+                            Madame Cheung Asian Cuisine has a modern look at the traditional asian resipies with a stylefull interior the restaurant puts alot of care in its fresh ingrienants and good taste&period; Speciality&colon; Sushi and other asian food&period; Location&colon; In the center of Hoorn        
                         </p>
-                        <a href="">Go to Website</a>
+                        <a href="https://madamecheung.nl/">Go to Website</a>
                     </li>
                     <li>
                         <img src="img/Restaurants/De-Hoofdtoren.png" title="Restaurant De Hoofdtoren" alt="restaurant with tables with old fashioned look">
                         <h1>Restaurant de Hoofdtoren</h1> 
                         <p>
-                            With a focus on fishfood this restaurant is placed in the historic tower build in the 16th centuary. This resteraunt has a unique dining experience with a view on the harbor. The atmosphere is romantic and rustic, perfect for a special occasion. Speciality: Fresh fish, crustaceans and shellfish. Location: Directly on het Ijsselmeer.
+                            With a focus on fishfood this restaurant is placed in the historic tower build in the 16th centuary&period; This resteraunt has a unique dining experience with a view on the harbor&period; The atmosphere is romantic and rustic&comma; perfect for a special occasion&period; Speciality&colon; Fresh fish&comma; crustaceans and shellfish&period; Location&colon; Directly on het Ijsselmeer&period;
                         </p>
-                        <a href="">Go to Website</a>
+                        <a href="https://hoofdtoren.nl/">Go to Website</a>
                     </li>
                     <li>
                         <img src="img/Restaurants/Hendrickje-Stoffels.png" title="Restaurant Hendrickje Stoffels" alt="restaurant with bar in front and modern look">
                         <h1>Hendrinkje Stoffels</h1> 
                         <p>
-                            This restaurant has a cozy, living room-like atmosphere and offers a wide range of dishes with a modern twist. The menu changes regularly and a lot of local and seasonal products are used. Specialty: Traditional dishes with a focus on local ingredients. Location: Cozyly located in the old town of Hoorn.
+                            This restaurant has a cozy&comma; living room-like atmosphere and offers a wide range of dishes with a modern twist&period; The menu changes regularly and a lot of local and seasonal products are used&period; Specialty&colon; Traditional dishes with a focus on local ingredients&period; Location&colon; Cozyly located in the old town of Hoorn&period;
                         </p>
-                        <a href="">Go to Website</a>
+                        <a href="https://hendrickje-stoffels.nl/">Go to Website</a>
                     </li>
                 </ul>
             </section>
@@ -82,7 +88,7 @@
                     <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
-                    GoingHoorn&#33; &copy; 2024. All rights reserved.
+                    GoingHoorn&#33; &copy; 2024&period; All rights reserved&period;
                 </li>
                 <li>
                     <a href="contact.html">Privacy policy</a>
