--- a/contact.html
+++ b/contact.html
@@ -78,11 +78,9 @@
             </aside>
 
             <form action="form.php" method="post">
-                    <label for="mr">Mr.</label>
-                    <input type="radio" id="mr" name="salutation" value="mr">
 
-                    <label for="ms">Ms.</label>
-                    <input type="radio" id="ms" name="salutation" value="ms">
+                    <label for="salutation">salutation&colon;</label>
+                    <input type="text" id="salutation" name="salutation" placeholder="salutation&period;&period;&period;">
 
                     <label for="name">name&colon;</label>
                     <input type="text" id="name" name="name" placeholder="Enter your name here&period;&period;&period;">
@@ -101,7 +99,7 @@
         </section>
 
         <section class="cookie">
-            this website has cookies&period; 
+            this website has <strong>cookies</strong>&period; 
         </section>
 
 
